<resources>
    <string name="app_name">Parthna E-Commerce</string>
    <string name="login">Login</string>
    <string name="mobile">Mobile No.</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_product">Search..</string>
    <string name="shortt">Short</string>
    <string name="filter">Filter</string>
    <string name="uniform_type">Winter Uniform Shirt</string>
    <string name="rupee">$</string>
    <string name="unifrom_price">599 Incl Tax</string>
    <string name="price">599</string>
    <string name="user_name">User Name</string>
    <string name="user_gmail">xyz123@gmail.com</string>
    <string name="add_profile">Add Profile</string>
    <string name="change_password">Change Password</string>
    <string name="favourite">Favourite</string>
    <string name="my_address">My Address</string>
    <string name="more">More</string>
    <string name="my_order">My Order</string>
    <string name="setting">Setting</string>
    <string name="item">Item( )</string>
    <string name="white_winter_uniform">White Winter Uniform</string>
    <string name="size_color">S-38 / White</string>
    <string name="count_down">-</string>
    <string name="zero">0</string>
    <string name="count_up">+</string>
    <string name="add_more_from_wishlist">Add more from wishlist</string>
    <string name="total_payable">Total Payable</string>
    <string name="bag_total">Bag Total</string>
    <string name="order_detail">Order Details</string>
    <string name="place_order">Place Order</string>
    <string name="winter_uniform_trouser">Winter Uniform Trouser</string>
    <string name="discount">30%</string>
    <string name="add_to_bag">Add to bag</string>
    <string name="forgot_passwor">Forgot Password</string>
    <string name="recover_your_password">Recover Your Password</string>
    <string name="email">Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="palcing_order">Thank you for placing order</string>
    <string name="enter_name">Name</string>
    <string name="enter_mail">Email</string>
    <string name="save">Save</string>
    <string name="select_image">Select Image</string>
    <string name="location">Location</string>
    <string name="please_enable_your_gps">please enable your gps</string>
    <string name="please_enable_your_mobile_data">please enable your mobile data</string>
    <string name="no_network_message">no network</string>
    <string name="no_internet">no internet</string>
    <string name="account">Account</string>
    <string name="home">Home</string>
    <string name="wishlist">Wishlist</string>
    <string name="cart">Cart</string>
    <string name="hello">Hello</string>
    <string name="xyz_email">xyz123@gmail.com</string>
    <string name="one">1</string>
    <string name="add_to_wishlist">Add to Wishlist</string>
    <string name="detail">Detail</string>
    <string name="no_wishlist_item">No Wishlist Item</string>
</resources>