<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:paddingHorizontal="@dimen/dp_20"
        tools:context=".Activities.Register_Activity">


        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:fontFamily="@font/poppins_regular"
            android:textFontWeight="300"
            android:layout_margin="@dimen/dp_30"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/txtRabbit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/sp_18"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginTop="@dimen/dp_25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLogin"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"/>


        <EditText
            android:id="@+id/edtMobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/mobile"
            android:textColor="@color/gray2"
            android:textSize="@dimen/sp_14"
            android:textColorHint="@color/gray2"
            android:inputType="number"
            android:maxLength="10"
            android:fontFamily="@font/poppins_regular"
            android:background="@android:color/transparent"
            android:layout_marginTop="@dimen/dp_30"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline"/>

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/gray3"
            app:layout_constraintTop_toBottomOf="@+id/edtMobile"/>

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColor="@color/gray2"
            android:textSize="@dimen/sp_14"
            android:textColorHint="@color/gray2"
            android:fontFamily="@font/poppins_regular"
            android:maxLines="1"
            android:background="@android:color/transparent"
            android:layout_marginTop="@dimen/dp_25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view1"/>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/gray3"
            app:layout_constraintTop_toBottomOf="@+id/edtPassword"/>

        <TextView
            android:id="@+id/txtForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="@dimen/sp_14"
            android:visibility="gone"
            android:textColor="@color/gray2"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:text="@string/login"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_regular"
            android:textFontWeight="300"
            android:textAllCaps="false"
            android:background="@drawable/btn_bg"
            android:layout_marginTop="@dimen/dp_15"
            app:layout_constraintTop_toBottomOf="@+id/txtForgotPassword"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:text="@string/register"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"
            android:textFontWeight="300"
            android:textAllCaps="false"
            android:background="@drawable/outline_bg_gray3"
            android:layout_marginBottom="@dimen/dp_10"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
