<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".Fragments.User_Fragment">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="@dimen/dp_125"
                    android:layout_height="@dimen/dp_125"
                    android:src="@drawable/demo_profile"
                    android:background="@color/white"
                    app:civ_border_color="@color/btncolor"
                    app:civ_border_width="@dimen/dp_2"
                    android:layout_marginTop="@dimen/dp_35"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>


                <ImageView
                    android:id="@+id/img_Edit"
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:elevation="@dimen/dp_2"
                    android:src="@drawable/img_edit"
                    app:layout_constraintEnd_toEndOf="@+id/imgProfile"
                    app:layout_constraintBottom_toBottomOf="@+id/imgProfile"/>

                <View
                    android:id="@+id/View"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:layout_marginTop="24dp"
                    android:background="@color/gray3"
                    android:elevation="@dimen/dp_2"
                    app:layout_constraintTop_toBottomOf="@+id/imgProfile"/>

                <EditText
                    android:id="@+id/edt_Name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_45"
                    android:hint="@string/enter_name"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/gray"
                    android:background="@drawable/outline_corner_3_btncolor"
                    android:paddingLeft="@dimen/dp_10"
                    android:layout_marginHorizontal="@dimen/dp_30"
                    android:layout_marginTop="@dimen/dp_30"
                    app:layout_constraintTop_toBottomOf="@+id/View"/>

                <EditText
                    android:id="@+id/edtLastName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_45"
                    android:hint="@string/last_name"
                    android:textSize="@dimen/sp_14"
                    android:visibility="gone"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/gray"
                    android:background="@drawable/outline_corner_3_btncolor"
                    android:paddingLeft="@dimen/dp_10"
                    android:layout_marginHorizontal="@dimen/dp_30"
                    android:layout_marginTop="@dimen/dp_25"
                    app:layout_constraintTop_toBottomOf="@+id/edt_Name"/>

                <EditText
                    android:id="@+id/edt_Mobile"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_45"
                    android:hint="@string/mobile"
                    android:textSize="@dimen/sp_14"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/gray"
                    android:inputType="number"
                    android:maxLength="10"
                    android:background="@drawable/outline_corner_3_btncolor"
                    android:paddingLeft="@dimen/dp_10"
                    android:layout_marginHorizontal="@dimen/dp_30"
                    android:layout_marginTop="@dimen/dp_25"
                    app:layout_constraintTop_toBottomOf="@+id/edtLastName"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_Save"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_45"
                    android:text="@string/save"
                    android:textSize="@dimen/sp_16"
                    android:textColor="@color/black"
                    android:textAllCaps="false"
                    android:layout_marginHorizontal="@dimen/dp_30"
                    android:layout_marginTop="@dimen/dp_50"
                    android:background="@drawable/btn_bg"
                    app:layout_constraintTop_toBottomOf="@+id/edt_Mobile"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
