<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_5"
        android:background="@drawable/outline_bg_gray3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/imgBoy"
            android:layout_width="@dimen/dp_84"
            android:layout_height="@dimen/dp_92"
            android:src="@drawable/img_boys"
            android:padding="@dimen/dp_5"
            android:background="@color/purple"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginVertical="@dimen/dp_10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


        <TextView
            android:id="@+id/txtProductType"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:text="@string/winter_uniform_trouser"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_12"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginHorizontal="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_10"
            app:layout_constraintStart_toEndOf="@+id/imgBoy"
            app:layout_constraintEnd_toStartOf="@+id/cv_Wishlist"
            app:layout_constraintTop_toTopOf="@+id/imgBoy"/>

        <TextView
            android:id="@+id/txtRupee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rupee"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_12"
            android:fontFamily="@font/poppins_medium"
            app:layout_constraintStart_toStartOf="@+id/txtProductType"
            app:layout_constraintTop_toBottomOf="@+id/txtProductType"/>

        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unifrom_price"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginStart="@dimen/dp_5"
            app:layout_constraintStart_toEndOf="@+id/txtRupee"
            app:layout_constraintTop_toTopOf="@+id/txtRupee"
            app:layout_constraintBottom_toBottomOf="@+id/txtRupee"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_Wishlist"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            app:cardCornerRadius="@dimen/dp_15"
            app:cardElevation="@dimen/dp_5"
            app:cardBackgroundColor="@color/white"
            android:layout_marginEnd="@dimen/dp_15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgWishListClicked"
                    android:layout_width="@dimen/dp_25"
                    android:layout_height="@dimen/dp_25"
                    android:src="@drawable/img_wishlist_clicked"
                    android:padding="@dimen/dp_4"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>